err/products.bitakora.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/Bitakora'...
Compiling './lib/python3.5/site-packages/Products/Bitakora/BitakoraCommunity.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/BitakoraCommunity.py", line 37
    True = 1
    ^
SyntaxError: can't assign to keyword

Compiling './lib/python3.5/site-packages/Products/Bitakora/CaptchasDotNet.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/CaptchasDotNet.py", line 61
    os.close(os.open(self.__time_stamp_file, os.O_CREAT, 0700))
                                                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/Products/Bitakora/Comment.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/Comment.py", line 88
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/Bitakora/XMLImporter.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/XMLImporter.py", line 189
    print importXML(fp.read())
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/Bitakora/akismet.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/akismet.py", line 102
    except (urllib2.HTTPError, urllib2.URLError, IOError), e:
                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/Bitakora/img'...
Listing './lib/python3.5/site-packages/Products/Bitakora/locale'...
Compiling './lib/python3.5/site-packages/Products/Bitakora/tag.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/tag.py", line 18
    return context.tag_all_html(context, REQUEST)
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/Bitakora/ui'...
Listing './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates'...
Listing './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/1'...
Listing './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/2'...
Listing './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/3'...
Listing './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/4'...
Compiling './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/changepass.do.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/changepass.do.py", line 27
    return context.REQUEST.RESPONSE.redirect('%s/login_form?msg=%s' % (context.communityUrl(), context.gettext('Your password has been changed')))
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/logout.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/logout.py", line 10
    return container.cookie_authentication.logout()
                                                  ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/reminder.do.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/reminder.do.py", line 48
    return context.REQUEST.RESPONSE.redirect('%s/reminder.done' % context.communityUrl())
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/step1.do.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/step1.do.py", line 31
    return RESPONSE.redirect('%s/step1?r=1' % context.communityUrl())
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/step2.do.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/step2.do.py", line 24
    return RESPONSE.redirect('%s/step2?r=1' % context.communityUrl())
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/tag.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/tag.py", line 14
    return context.tag_all_html(context, request)
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/tagsAndPixels.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/tagsAndPixels.py", line 35
    return hiz
             ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/usersBlog.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/ui/communityTemplates/usersBlog.py", line 16
    return b[0].getURL()
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/Bitakora/ui/tag.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/ui/tag.py", line 14
    return context.tag_all_html(context, request)
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/Bitakora/urllister.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/urllister.py", line 34
    print url
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/Bitakora/utils.py'...
***   File "./lib/python3.5/site-packages/Products/Bitakora/utils.py", line 180
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.Bitakora-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
